# decentralized-verl

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu  README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
decentralized_verl/: __init__.py
decentralized_verl/algorithms/: __init__.py  grpo.py  ppo.py
decentralized_verl/cli/: __init__.py  run_dht.py  run_training.py  run_worker.py
decentralized_verl/core/: __init__.py  config.py  node.py  protocol.py
decentralized_verl/network/: __init__.py  connection.py  dht_manager.py  gossip.py  peer_router.py
decentralized_verl/training/: __init__.py  coordinator.py  experience.py  gradient_sync.py  trainer.py
decentralized_verl/utils/: __init__.py  checkpointing.py  logging.py
decentralized_verl/workers/: __init__.py  actor.py  base.py  critic.py  reference.py  reward.py
examples/: custom_reward.py  multi_node_setup.py  simple_training.py
tests/: __init__.py  conftest.py  test_algorithms.py  test_config.py  test_experience.py  test_protocol.py
