[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decentralized-verl"
version = "0.1.0"
description = "Decentralized RLHF training framework combining veRL algorithms with P2P coordination"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Decentralized veRL Contributors"}
]
keywords = [
    "rlhf",
    "reinforcement-learning",
    "llm",
    "distributed",
    "decentralized",
    "p2p",
    "ppo",
    "grpo",
    "hivemind",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "hivemind>=1.1.10",
    "accelerate>=0.25.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "structlog>=23.1.0",
    "multiaddr>=0.0.9",
    "tenacity>=8.2.0",
    "msgpack>=1.0.0",
    "xxhash>=3.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.4.0"]
sglang = ["sglang>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]
all = [
    "decentralized-verl[vllm,sglang,dev,docs]",
]

[project.scripts]
dverl-dht = "decentralized_verl.cli.run_dht:main"
dverl-worker = "decentralized_verl.cli.run_worker:main"
dverl-train = "decentralized_verl.cli.run_training:main"

[project.urls]
Homepage = "https://github.com/yurekami/decentralized-verl"
Documentation = "https://github.com/yurekami/decentralized-verl#readme"
Repository = "https://github.com/yurekami/decentralized-verl"
Issues = "https://github.com/yurekami/decentralized-verl/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["decentralized_verl*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["decentralized_verl"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["decentralized_verl"]
skip = [".venv", "venv", "build", "dist"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B", "C"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "build",
    "dist",
    "venv",
    ".venv",
]
